--- a/_notes/20200604c.md
+++ b/_notes/20200604c.md
@@ -4,4 +4,4 @@ date: 2020-06-04
 reply: https://twitter.com/derykmakgill/status/1268668154483552256?s=20
 ---
 
-The best money is the one used by both your friends and enemies.
+[@SallyMayweather](https://twitter.com/SallyMayweather) The best money is the one used by both your friends and enemies.
