--- a/_notes/20200513.md
+++ b/_notes/20200513.md
@@ -2,6 +2,7 @@
 layout: note
 date: 2020-05-13
 reply: https://www.reddit.com/r/btc/comments/gj50io/on_hodling/?utm_source=share&utm_medium=web2x
+excerpt: It's really unfortunate the Core cabal tarnished the good name of hodling and capital savings with the outrageous lie that "because hodling is good, you shouldn't be able to spend your Bitcoin easily and cheaply."
 ---
 
 It's really unfortunate the Core cabal tarnished the good name of hodling and capital savings with the outrageous lie that "because hodling is good, you shouldn't be able to spend your Bitcoin easily and cheaply."
