--- a/_notes/20180910.md
+++ b/_notes/20180910.md
@@ -1,7 +1,7 @@
 ---
 layout: note
 date: 2018-09-10
-image: https://pbs.twimg.com/media/Dmvl5_oVAAMxrOe?format=jpg&name=small
+images: https://pbs.twimg.com/media/Dmvl5_oVAAMxrOe?format=jpg&name=small
 ---
 
 Wrapping up the cruise today with some friends from Bitcoin.com in Ibiza.
