--- a/_notes/20130628.md
+++ b/_notes/20130628.md
@@ -1,7 +1,7 @@
 ---
 layout: note
 date: 2013-06-28
-image: https://www.facebook.com/the.paideia.institute/photos/a.138287679571974/526238104110261/?type=3&__cft__[0]=AZWazckL5aUG6_rmPSvvzuVrRwSTPYa_mvduVdtRT05Kity0Hs2Bg3dZitsIxWItl4vHfTQBmsvERaZ1e_LdMWLof6YbZodh1qOzEmkwQ56XhRla8aDJyOPRXG5OhzptSeHn_hv1Q2xIiNSu39-CIvmwrMp6GC4wAPFhWN9Sr_WsMg&__tn__=EH-R
+image: https://scontent-ort2-2.xx.fbcdn.net/v/t31.0-8/1048174_526238104110261_1547626818_o.jpg?_nc_cat=109&_nc_sid=2d5d41&_nc_ohc=wDGP_tpBBNwAX_pzV3f&_nc_ht=scontent-ort2-2.xx&oh=f9eb72b60d486ad4aca032e0295ab9fb&oe=5EFED335
 ---
 
 Ostia.
