--- a/_notes/20171205.md
+++ b/_notes/20171205.md
@@ -1,7 +1,7 @@
 ---
 layout: note
 date: 2017-12-05.md
-reply: Some time ago, Deryk Makgill posted about The Greek Way by Edith Hamilton. A few weeks ago, I spotted a copy for cheap at a used book store, and remembering Derek's post, I bought it.
+reply: https://www.facebook.com/mpaldous/posts/944745819015859
 ---
 
 She's amazing. Her passion is exactly what I felt was lacking in my Classics departments at college. It's infectious and inspiring.
