--- a/_notes/20171015.md
+++ b/_notes/20171015.md
@@ -7,3 +7,6 @@ type: checkin
 
 São Paulo and LibertyCon Brasil 2017 were a blast. Lots of new friends and tons of people interested in alternatives to college.
 Heading back to Austin for a week or so then will be speaking in Sarajevo, Bosnia at European Students For Liberty OPEN Fest 2017 and at the Institute for Humane Studies at the end of the month.
+
+
+Test
