--- a/_notes/20200607.md
+++ b/_notes/20200607.md
@@ -2,6 +2,7 @@
 layout: reply
 source: https://twitter.com/derykmakgill/status/1269704963141373952
 reply: https://twitter.com/isaacmorehouse/status/1269607414892036096
+date: 2020-06-07
 ---
 
 [@isaacmorehouse](https://twitter.com/isaacmorehouse) You said it better. 
