--- a/_notes/20200607a.md
+++ b/_notes/20200607a.md
@@ -2,6 +2,7 @@
 layout: reply
 source: https://twitter.com/derykmakgill/status/1269705945287884802
 reply: https://twitter.com/isaacmorehouse/status/1269607362391871489
+date: 2020-06-07
 ---
 
 [@isaacmorehouse](https://twitter.com/isaacmorehouse) I just remembered you double space after periods.... Satoshi?.... Dave??
