--- a/_notes/20200609b.md
+++ b/_notes/20200609b.md
@@ -5,4 +5,4 @@ source: https://twitter.com/derykmakgill/status/1270450936180342790
 reply: https://twitter.com/TK_Coleman/status/1270450468343484416
 ---
 
-I didn’t appreciate the genius of it until redently. A.A. Milne was a once in a generation creator.
+I didn’t appreciate the genius of it until recently. A.A. Milne was a once in a generation creator.
