--- a/_notes/20200610.md
+++ b/_notes/20200610.md
@@ -3,4 +3,4 @@ layout: note
 date: 2020-06-10
 ---
 
-I've been bing-listening to the [Bobiverse series](https://www.amazon.com/Are-Legion-Bob-Bobiverse-Book-ebook/dp/B01LWAESYQ) to get ready for the [fourth book](https://www.amazon.com/Heavens-River-Bobiverse-Book-4/dp/B088C51F5H/) in September. I normally don't do audiobooks but this series was written first for audio, and the narration is incredible.  I can't recommened it enough.
+I've been bing-listening to the [Bobiverse series](https://www.amazon.com/Are-Legion-Bob-Bobiverse-Book-ebook/dp/B01LWAESYQ) to get ready for the [fourth book](https://www.amazon.com/Heavens-River-Bobiverse-Book-4/dp/B088C51F5H/) in September. I normally don't do audiobooks but this series was written first for audio, and the narration is incredible.  I can't recommend it enough.
