--- a/_notes/20140312.md
+++ b/_notes/20140312.md
@@ -4,4 +4,4 @@ date: 2014-03-12
 source: https://www.facebook.com/events/585439558215690/permalink/605791886180457
 ---
 
-Looking forward to seeing everyone at 6:30, Angell Hall Auditorium C tomorrow! We've just got confirmation we'll be raffling off part of a Bitcoin and an account with BitBox! Questions? derekmag@umich.edu
+Looking forward to seeing everyone at 6:30, [Angell Hall Auditorium C](https://www.facebook.com/events/585439558215690/) tomorrow! We've just got confirmation we'll be raffling off part of a Bitcoin and an account with BitBox! Questions? derekmag@umich.edu
