--- a/_notes/20110329.md
+++ b/_notes/20110329.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-date: 20110329.md
+date: 2011-03-29
 source: https://egode.blogspot.com/2011/05/good-book-1-notes-from-underground.html
 ---
 
