--- a/_notes/20110208.md
+++ b/_notes/20110208.md
@@ -3,4 +3,4 @@ layout: note
 date: 2011-02-08
 ---
 
-Why don't all the idiots in this class who say they don't care about "materialism" give up their clothes, phones, cars (all paid for my parents!!!!)?
+Why don't all the idiots in this class who say they don't care about "materialism" give up their clothes, phones, cars (all paid for by parents!!!!)?
