--- a/_photos/20130628.md
+++ b/_photos/20130628.md
@@ -1,7 +1,8 @@
 ---
 layout: note
 date: 2013-06-28 11:21:49
-image: https://scontent-ort2-2.xx.fbcdn.net/v/t31.0-8/1048174_526238104110261_1547626818_o.jpg?_nc_cat=109&_nc_sid=2d5d41&_nc_ohc=wDGP_tpBBNwAX_pzV3f&_nc_ht=scontent-ort2-2.xx&oh=f9eb72b60d486ad4aca032e0295ab9fb&oe=5EFED335
+image: assets/img/ostia_13-06-28_censored.jpg
+source: https://www.facebook.com/the.paideia.institute/photos/a.138287679571974/526238104110261/?type=3
 ---
 
 Ostia.
