--- a/_photos/20130220.md
+++ b/_photos/20130220.md
@@ -1,5 +1,5 @@
 ---
-layout: note
+layout: photo
 date: 2013-02-20 11:58:02
 source: https://www.facebook.com/MichiganLibertyProject/photos/t.100001482669675/212214762252972/
 image: assets/img/michigan_skeet_13-02-20_censorsored.jpg
