--- a/_photos/20130628.md
+++ b/_photos/20130628.md
@@ -1,5 +1,5 @@
 ---
-layout: note
+layout: photo
 date: 2013-06-28 11:21:49
 image: assets/img/ostia_13-06-28_censored.jpg
 source: https://www.facebook.com/the.paideia.institute/photos/a.138287679571974/526238104110261/?type=3
