--- a/_notes/20200615.md
+++ b/_notes/20200615.md
@@ -3,4 +3,4 @@ layout: note
 date: 2020-06-15 10:31:35
 ---
 
-Perhaps it wasn't a good ideal to build an Internet that allows anyone, anywhere, anytime to find a photo of you with a Google search.
+Perhaps it wasn't a good idea to build an Internet that allows anyone, anywhere, anytime to find a photo of you with a Google search.
