--- a/_replies/20200616b.md
+++ b/_replies/20200616b.md
@@ -5,4 +5,4 @@ reply: https://twitter.com/bitcoincashnode/status/1273001354764652549
 ---
 
 [@bitcoincashnode](https://twitter.com/bitcoincashnode) 
-Bitcoin will not succeed until people learn the lessons Mike Hearn tried to teach us! I tried to pass on the warning several times and was dismissed by several people in BCHN last year as a bad actor or paid operative. Now it might be too late, but I hope there's still time to avoid a split.
+Bitcoin will not succeed until people learn the lessons Mike Hearn tried to teach us! I tried to pass on the warning several times and was dismissed by people now in BCHN last year as a bad actor or paid operative. It might be too late, but I hope there's still time to avoid a split. As it is, I will not be holding Bitcoin Cash unless the effort to split is roundly defeated both practically and intellectually.
