--- a/_replies/20200616b.md
+++ b/_replies/20200616b.md
@@ -5,4 +5,4 @@ reply: https://twitter.com/bitcoincashnode/status/1273001354764652549
 ---
 
 [@bitcoincashnode](https://twitter.com/bitcoincashnode) 
-[Steve Patterson](https://steve-patterson) and I warned this was coming last year and were dismissed by people now in BCHN as bad actors or paid operatives. BCHN seems to have learned from their mistake, but it might be too late. I hope there's still time to avoid a split. As it is, I will not be holding Bitcoin Cash unless the effort to split is roundly defeated both practically and intellectually.
+[@stevepatterson](https://steve-patterson) and I warned this was coming last year and were dismissed by people now in BCHN as bad actors or paid operatives. BCHN seems to have learned from their mistake, but it might be too late. I hope there's still time to avoid a split. As it is, I will not be holding Bitcoin Cash unless the effort to split is roundly defeated both practically and intellectually.
