--- a/_notes/20200617a.md
+++ b/_notes/20200617a.md
@@ -3,6 +3,4 @@ layout: note
 date: 2020-06-17 14:05:02
 ---
 
-If you've ever shipped anything to your home under your name (or done just about anything else with your address and your real name), your information is probably public and trivially accessible. Aggregators like [Whitepages](https://www.whitepages.com/), [MyLife](https://www.mylife.com/), and dozens of others scrape "public" information and aggregate it into user profiles to which you've never consented.
-
-The good news is you can contact these services and *demand* they remove them. They'll give you some attitude but just follow up once or twice more and they will comply because they know what they're doing borders on criminal. The bad news is they will often relist you later and there are so many data peddlers out there like this now that it's hard to keep track of them all.   
+If you've ever shipped anything to your home under your name (or done just about anything else with your address and your real name), your information is probably public and trivially accessible. Aggregators like [Whitepages](https://www.whitepages.com/), [MyLife](https://www.mylife.com/), and dozens of others scrape "public" information and aggregate it into user profiles to which you've never consented. The good news is you can contact these services and *demand* they remove them. They'll give you some attitude but just follow up once or twice more and they will comply because they know what they're doing borders on criminal. The bad news is they will often relist you later and there are so many data peddlers out there like this now that it's hard to keep track of them all.   
