--- a/_links/20200617.md
+++ b/_links/20200617.md
@@ -7,4 +7,4 @@ url: https://a.singlediv.com
 link: https://a.singlediv.com
 ---
 
-If you think you're good at CSS, look out this website. These designs are all done with a single <div> element. 
+If you think you're good at CSS, see this website. These designs are all done with a single <div> element. 
