--- a/_replies/20200618.md
+++ b/_replies/20200618.md
@@ -1,9 +1,12 @@
 ---
 layout: reply
 date: 2020-06-18 16:00:00
-reply: https://twitter.com/vinarmani/status/1273706835967541249?s=20
+reply: https://twitter.com/vinarmani/status/1273706835967541249
+source: https://twitter.com/derykmakgill/status/1273723618787196930
 ---
 
-[@vinarmani](https://twitter.com/vinarmani) The 6-month BCH fork schedule is an undue burden on business because of the uncertainty it introduces into the stability of the BCH network effect. The history of the BSV/BCH split tells us that neutral businesses end up seeing less usage on both chains after the split has taken place. That's not a good value proposition for building your business. See this [article](https://jasonc.me/blog/why-memo-supports-bsv) by Jason, the creator of Memo.
+[@vinarmani](https://twitter.com/vinarmani) I think we can falsify this by looking at some data. Memo reported losing 50% activity on BCH after the split and 80% on BSV. That's not a winning value proposition for a business trying to build on Bitcoin Cash. That's the undue burden—loss of network effect. 
+
+See this [article](https://jasonc.me/blog/why-memo-supports-bsv) by Jason, the creator of Memo.
 
 >As with any war, trying to stay neutral has consequences. By continuing to support both sides, neither side was happy. By January 2019, two months after the split, Memo usage on the BSV chain dropped more than 80% compared to pre-fork levels. The BCH chain wasn’t much better, with usage dropping more than 50%. Even though there were few technical reasons to choose a side, there was a lot of pressure from users. The main Memo site, memo.cash, followed the greater proof of work coin, BCH, and a separate site, memo.sv, was created for BSV. The BSV community felt more betrayed and this was often cited as the reason for users leaving.
