--- a/_replies/20200618.md
+++ b/_replies/20200618.md
@@ -5,7 +5,7 @@ reply: https://twitter.com/vinarmani/status/1273706835967541249
 source: https://twitter.com/derykmakgill/status/1273723618787196930
 ---
 
-[@vinarmani](https://twitter.com/vinarmani) I think we can falsify this by looking at some data. Memo reported losing 50% activity on BCH after the split and 80% on BSV. That's not a winning value proposition for a business trying to build on Bitcoin Cash. That's the undue burden—loss of network effect. 
+[@vinarmani](https://twitter.com/vinarmani) I think we can falsify this by looking at some data. The 6-month BCH fork schedule is an undue burden on business because of the uncertainty it introduces into the stability of the BCH network effect.  Memo reported losing 50% activity on BCH after the split and 80% on BSV. That's not a winning value proposition for a business trying to build on Bitcoin Cash. That's the undue burden—loss of network effect. 
 
 See this [article](https://jasonc.me/blog/why-memo-supports-bsv) by Jason, the creator of Memo.
 
