Update and rename 20200618b.md to 20200618a.md

--- a/_replies/20200618a.md
+++ b/_replies/20200618a.md
@@ -4,4 +4,4 @@ date: 2020-06-18 22:20:51
 reply: https://twitter.com/david_perell/status/1273130562023305220
 ---
 
-[@david_perell)(https://twitter.com/david_perell) Capitalism is what makes leisure possible at all.
+[@david_perell](https://twitter.com/david_perell) Capitalism is what makes leisure possible at all.
