--- a/_replies/20200619.md
+++ b/_replies/20200619.md
@@ -2,6 +2,7 @@
 layout: reply
 date: 2020-06-19 15:59:20
 reply: https://twitter.com/isaacmorehouse/status/1274081043490975747
+blockquote: Me and @TK_Coleman talk about why free-market advocates don't seem to see when they are [winning.](https://youtu.be/LZTSGQeGlr4)
 ---
 
 [@isaacmorehouse](https://twitter.com/isaacmorehouse) [@tk_coleman](https://twitter.com/tk_coleman) The extent to which these things are “bad” is usually a result of wacky existing laws. Companies have their arms twisted by bureaucrats and lawyers who are ever ready to punish or profit at their expense for tiny transgressions. Blame that, but don’t write off the market solving social issues. That’s something to celebrate. We should want more of this and should expect *more* under a truly free market.
