--- a/_notes/20200619.md
+++ b/_notes/20200619.md
@@ -1,5 +1,5 @@
 ---
-layout: notes
+layout: note
 date: 2020-06-19 13:50:19
 source: https://twitter.com/derykmakgill/status/1274051949906857984
 ---
