--- a/_replies/20130507.md
+++ b/_replies/20130507.md
@@ -5,4 +5,4 @@ reply: http://blogs.adobe.com/fireworks/2013/05/the-future-of-adobe-fireworks
 blockquote: We have decided not to update Fireworks to CC and instead will focus on developing new tools to meet our customers needs.
 ---
 
-Tough news that Adobe is shutting down updates for Fireworks. As a businessman, I understand it. Hell, even as a designer or developer I understand it. There's too much overlap now between other softwares in their lineup. But being the armchair hack that I am, I'm annoyed and angry! Fireworks has done everything I need it to do for years now going all the way back to when Mrs. Olps taught me the basics in high school. I've *never* found the other tools from Adobe to be nearly as easy to master, and it looks like I'll need to learn to use several of them to fit the weird niche Fireworks managed to fit for all my needs.
+Tough news that Adobe is shutting down updates for Fireworks. As a businessman, I understand it. Hell, even as a designer or developer I understand it. There's too much overlap now between other softwares in their lineup. But being the armchair hack that I am, I'm annoyed and angry! Fireworks has done everything I need it to do for years now going all the way back to when Mrs. Olps taught me the basics in high school. I've never found the other tools from Adobe to be nearly as easy to master, and it looks like I'll need to learn to use several of them to fit the weird niche Fireworks managed to fit for all my needs.
