--- a/_notes/20200624.md
+++ b/_notes/20200624.md
@@ -3,4 +3,4 @@ layout: note
 date: 2020-06-24 22:33:19
 ---
 
-I started using the Web "seriously" just in time to catch the tail-end of B.F.D. (Before Flat Design) era. Everything is so boring now. Give me Geocities! 
+I started using the Web "seriously" just in time to catch the tail-end of the B.F.D. (Before Flat Design) era. Everything is so boring now. Give me Geocities! 
