--- a/_replies/20200625.md
+++ b/_replies/20200625.md
@@ -5,4 +5,4 @@ reply: https://twitter.com/nayafia/status/1273304859387719680
 blockquote: Hi I wrote a book! It's called Working in Public, and it's the story of modern open source and its implications for online communities and the creator economy. Now available for pre-order on Amazon.
 ---
 
-[@nayafia](https://twitter.com/nayafia/status/1273304859387719680) I look forward to reading this and just pre-ordered. Incidentally, I've been impressed with the quality of [@stripepress](https://twitter.com/stripepress) books. Acid-free paper AND sewn (albeit a bit tight) bindings in a sturdy hardcover. That's how hardcovers should be made—to last. 
+[@nayafia](https://twitter.com/nayafia/status/1273304859387719680) I look forward to reading this and just pre-ordered. Incidentally, I've been impressed with the quality of [@stripepress](https://twitter.com/stripepress) books. Acid-free paper and sewn (albeit a bit tight) bindings. Hardcovers should be made to last.
