--- a/_chats/20110518.md
+++ b/_chats/20110518.md
@@ -4,49 +4,118 @@ layout: chat
 date: 2011-05-18 00:37:00
 ---
 
-07:40 < kanzure> i have been pondering reorgs...
+07:40 <mkgll> I figured it out
 
-07:40 < kanzure> imagine that an attacker deposits into some bitcoin service (not necessarily an exchange), then withdraws where the service does not make a withdrawal based on other unspent outputs unrelated to the deposit.
+07:40 <mkgll> they're communists!
 
-07:40 < kanzure> in the event of a reorg, the attacker could try to mine a block that does not include the deposit, but does include the withdrawal.
+07:40 <mkgll> damn smurfs
 
-07:40 < kanzure> so it seems like the only way to defend against this is to always only allow withdraws based on unspents that have referenced the original deposit in their history somewhere (it can be either the immediate prevout or any  in the history). but other than that, i can't think of a way to defend against this.
+07:40 <r> why?
 
-07:42 < kanzure> oops instead of "then withdraws where the service does not make a withdrawal based on other unspent outputs unrelated to the deposit" i mean "then withdraws where the service does not make a withdrawal transaction based on the deposited unspent outputs"
+07:42 <mkgll> papa smurf is totally karl marx
 
-07:42 <@andytoshi> kanzure: mining the withdrawal wouldn't prevent someone else mining the deposit right?
+07:42 <mkgll> all of the smurfs wear identical clothing
 
-07:42 <@andytoshi> so it's actually a harder attack to pull off because you aren't preventing the honest case from happening?
+07:42 <r> dude you'd be the person in 1919 like burning russian people. hahahahahahaha
 
-07:43 < kanzure> er, let me clarify
+07:43 <mkgll> they have no currency, they all work for the benefit of the state
 
-07:43 < kanzure> i mean that the deposit no longer exists in the blockchain after the reorg
+07:43 <mkgll> each smurf is labeled by their occupation
 
-07:43 < kanzure> but the withdrawal does
+07:43 <mkgll> Farmer Smurf, etc
 
-07:44 < kanzure> my idea for preventing this is to make all withdrawals (per user) always reference every single one of their deposits somehow (even if their deposits were spent some other way? i dunno.) one way to do this would be to always keep at least 1 satoshi for their deposits to couple to future withdrawals. so if their deposits ever vanish, then their withdrawals by definition must vanish.
+07:44 <r> hahahaha
 
-07:45 <@andytoshi> yeah, in bitcoin i think to reference all deposits like this you'd have to have them as inputs
+07:45 <r> i guess
 
-07:45 <@andytoshi> which is gonna scale really badly
+07:45 <mkgll> and they look towards Papa Smurf, the father, for guidance. Papa smurf is distinguished by red, communism
 
-07:45 < kanzure> i think it's just "as long as the inputs 'touch it' somehow" really-- it doesn't have to be a huge list of inputs, just 1 i think
+07:45 <mkgll> its a total utopian society
 
-07:45 <@andytoshi> ah, no, you could consolidate all deposits, then just reference the consolidated out..
+07:45 <mkgll> all of their mushroom homes are identical
 
-07:45 < kanzure> right
+07:45 <r> yuppp
 
-07:45 <@andytoshi> yup
+07:45 <mkgll> no chance for improvment or extra mushroom additons
 
-07:46 <@andytoshi> still seems more wasteful than it inprinciple needs to be
+07:46 <r> thats debatable
 
-07:46 <@andytoshi> but i think that's best you can do with bitcoin
+07:46 <r> they can grow more mushrooms!
 
-07:46 < kanzure> so per-user there must be a consolidated output transaction, and there must be at least 1 satoshi remaining of
-that consolidated balance, i think? and the other balance can be sent anywhere else.
+07:46 <r> its possible
 
-07:46 < kanzure> yeah i mean i see no alternative to this
+07:46 <mkgll> but each smurf only has on shroom
 
-07:46 < kanzure> otherwise you will absolutely lose bitcoin in a reorg
+07:46 <mkgll> one can only assume their brainwashed into not wanting more
+  
+07:46 <r> cant assume though
+  
+07:46 <mkgll> one can observe!
+  
+07:46 <mkgll> and Gargamel is supposed to represent evil capitalism! 
 
+07:46 <mkgll> hes super productive, greedy, etc
+  
+07:46 <r> maybe they cant use more because they are magical mushrooms that have been there for generations that can no longer grow
+  
+07:46 <r> how is he productive?
+  
+07:46 <mkgll> hes a wizard!
 
+07:46 <r> he fails at everything hahaha
+
+07:46 <mkgll> hes a wizard!
+
+07:46 <mkgll> he creates spells and potions
+
+07:46 <mkgll> because hes a capitalist!
+
+07:46 <r> yeah but they all suck
+
+07:46 <r> so he represents the dangers because he makes potions and tries to kill everyone
+
+07:46 <r> of capitalism*
+
+07:46 <mkgll> yesss
+
+07:46 <mkgll> and hes greedy
+
+07:46 <mkgll> he wants to turn the smurfs into a potion to make gold
+  
+  07:46 <r> huh...
+  
+  07:46 <r> never thought of it like that
+  
+  07:46 <mkgll> smurfs are communist propganda!
+  
+  07:46 <r> bahhh
+  
+  07:46 <r> or its just a show for children and you can shut the hell up.. hahahahahaha
+  
+  07:46 <r> read so far in to things
+    
+  07:46 <r> "why you gotta get so smart on me?"
+      
+
+ 07:46 <r> haha
+        
+07:46 <r> makes sense though
+          
+ 07:46 <mkgll> its a show for children
+
+ 07:46 <mkgll> thats why!
+  
+   07:46 <mkgll> they want to turn the children into collectivsts!
+  
+   07:46 <r> look up the creators of the show
+  
+   07:46 <r> then research them
+  
+   07:46 <mkgll> "lets all be like the smurfs"!
+  
+   07:46 <r> then ill believe it more
+  
+07:46 <mkgll> I shall find it!
+  
+  07:46 <r> doo ittttt
+  
