--- a/_replies/20200627.md
+++ b/_replies/20200627.md
@@ -2,6 +2,8 @@
 layout: reply
 date: 2020-06-27 17:49:39
 reply: https://parler.com/profile/John/posts
+source: Parler
+blockquote: Welcome to Parler. I will see you in the comments. Please leave a review on the app stores and share with your friends!
 ---
 
 Thanks [@john.](https://parler.com/profile/John/posts) I'm curious how Parler plans to avoid becoming the next Gab cesspool? I love upstart social media for free expression, but early adopters are often disproportionately some of the most toxic people on the internet. Many of us aren't looking for an alt-right shitpost service. We just hate the information manipulation, though control and outrage mobs that rule Twitter. I hope you succeed. You have an uphill battle.
