--- a/_notes/20200628a.md
+++ b/_notes/20200628a.md
@@ -3,4 +3,4 @@ layout: note
 date: 2020-06-28 12:43:03
 ---
 
-Tip about buying books: you can often get perfect, first edition hardcovers of great books on eBay for cheaper than the mass-market paperback. I [read](https://derykmakgill.github.io/drw/replies/2020/06/23/20200623a/) *Ender's Game* recently and picked up a signed first edition copy of the parallel novel *Ender's Shadow* for $8.99.
+Tip about buying books: you can often get perfect, first edition hardcovers of great books on eBay for cheaper than the mass-market paperback. I [read](https://derykmakgill.github.io/drw/replies/2020/06/23/20200623a/) *Ender's Game* recently and picked up a signed first edition copy of the parallel novel *Ender's Shadow* for $8.99. The binding isn't sewn, but the paper is acid-free and the book will [last](https://derykmakgill.github.io/drw/replies/2020/06/25/20200625/) to give to give to your kids.
