--- a/_replies/20200630c.md
+++ b/_replies/20200630c.md
@@ -6,4 +6,4 @@ blockquote: I'm not loving Hey, but I'm ready to quit gmail. Any thoughts on Fas
 source: https://twitter.com/_mkgll/status/1278085403833249794
 ---
 
-[@cagrimmett](https://twitter.com/cagrimmett) A funny point about Hey... they're very publicly against trackers from marketers but they [track]( everything you're doing in your account and on their site![@cagrimmett](https://twitter.com/cagrimmett) A funny point about Hey... they're very publicly against trackers from marketers but they [track](https://hey.com/policies/privacy/) everything you're doing in your account and on their site!
+[@cagrimmett](https://twitter.com/cagrimmett) A funny point about Hey... they're very publicly against trackers from marketers but they [track](https://hey.com/policies/privacy/) everything you're doing in your account and on their site!
