--- a/_chats/20200314.md
+++ b/_chats/20200314.md
@@ -25,4 +25,4 @@ date: 2020-03-14 15:52:13
 
 < mkgll > All the early conclusions are silly. I read they're saying 1/10 people will get sick because 1/10 people tested were getting "diagnosed." But they're only testing people who are already really sick! 
 
-< mkgll > Anyway I just thtink that the real threat is what comes next. All the pundits are clamoring for a totalitarian Uberstadt that has random medical screaning and all sorts of other draconian shit in the future.
+< mkgll > Anyway I just think that the real threat is what comes next. All the pundits are clamoring for a totalitarian Uberstadt that has random medical screening and all sorts of other draconian shit in the future.
